tests/success/return_if_consteval.bz
function main() -> i32
{
	consteval b = true;
	return if consteval (b) {
		0
	} else {
		unreachable
	};
}
