tests/error/comptime/pointer_difference09.bz
function test()
{
	(consteval {
		consteval i = 0;
		consteval j = 0;
		&i - &j;
	});
}
